<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate">Calculate BMI</string>
    <string name="enter_your_height_i_e_1_70">Enter your height. i.e. 1.70</string>
    <string name="enter_your_weight_i_e_70_2">Enter your weight. i.e. 70.2</string>
    <string name="description">You can find out whether you are overweight, underweight or ideal weight.</string>
    <string name="heading">Let\'s calculate your current BMI</string>
    <string name="logo">logo</string>
    <string name="result">23.66</string>
    <string name="heading_result">Your BMI is</string>
    <string name="start_over">Start over</string>
    <string name="result_description">A normal weight BMI (18.5 to 24.9) suggests a weight that is generally considered healthy for a given height, minimizing the risk of weight-related health issues. However, it\'s important to note that BMI doesn\'t account for factors like muscle mass, bone density, and distribution of fat, so it may not perfectly reflect an individual\'s health status.</string>
    <string name="heading_result_2">Result</string>
</resources>