<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-10dp"
    android:background="@color/dark_gray"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="-8dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_weight"
                app:tint="@color/teal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/heading_result_2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/result_container"
            android:orientation="vertical"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_result"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_BMI_weight_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/teal"
                    android:textStyle="bold"
                    tools:text="Normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/bmi_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:maxLength="5"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:textStyle="bold"
                tools:text="@string/result" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SeekBar
                    android:id="@+id/bmiSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:max="100"
                    android:progressDrawable="@drawable/seekbar_result" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/result_BMI_weight_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Normal" />

        <TextView
            android:id="@+id/result_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="20sp"
            android:textColor="@color/light_white"
            tools:text="@string/result_description" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_start_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/teal"
        android:padding="16dp"
        android:text="@string/start_over"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>